--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-client": "^2.6.10",
     "graphql-yoga": "^1.18.3",
     "mariadb": "^2.5.3",
+    "next": "^10.0.7",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
