--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "shopping_manager",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -22,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "nodemon ./server/index.js"
+    "watch": "nodemon ./server/index.js",
+    "next": "next dev"
   },
   "eslintConfig": {
     "extends": [
