--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "react-scripts": "4.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "next dev",
+    "build": "next build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "watch": "nodemon ./server/index.js",
-    "next": "next dev"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
