--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "apollo-client": "^2.6.10",
-    "graphql-yoga": "^1.18.3",
-    "mariadb": "^2.5.3",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
-    "next": "^10.0.7",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "next dev",
-    "build": "next build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
